--- a/reactiveresume/compose.yaml
+++ b/reactiveresume/compose.yaml
@@ -1,6 +1,7 @@
 services:
   postgres:
     image: postgres:15.15
+    container_name: postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: postgres
@@ -20,6 +21,7 @@ services:
 
   printer:
     image: ghcr.io/browserless/chromium:v2.39.0
+    container_name: printer
     restart: unless-stopped
     ports:
       - "4000:3000"
@@ -40,6 +42,7 @@ services:
 
   reactive-resume:
     image: amruthpillai/reactive-resume:v5.0.7
+    container_name: reactive-resume
     restart: unless-stopped
     ports:
       - "3000:3000"
