--- a/reactiveresume/compose.yaml
+++ b/reactiveresume/compose.yaml
@@ -31,7 +31,7 @@ services:
       - QUEUED=10
       - TOKEN=${TOKEN}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4000/pressure?token=${TOKEN}"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/pressure?token=${TOKEN}"]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -49,7 +49,7 @@ services:
     environment:
      - TZ="Etc/UTC"
      - APP_URL="https://resume.${DOMAIN}"
-     - PRINTER_APP_URL="http://localhost:4000"
+     - PRINTER_APP_URL="http://host.docker.internal:4000"
      - PRINTER_ENDPOINT="ws://printer:4000"
      - DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
     volumes:
