--- a/reactiveresume/.env.sample
+++ b/reactiveresume/.env.sample
@@ -1,2 +1,7 @@
-TOKEN=TOKEN
-AUTH_SECRET=AUTH_SECRET
+TOKEN=
+AUTH_SECRET=
+TZ="America/New_York"
+APP_URL="http://192.168.50.65:3000/"
+PRINTER_APP_URL="http://host.docker.internal:3000"
+PRINTER_ENDPOINT="ws://printer:3000"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
