--- a/scrutiny/compose.yaml
+++ b/scrutiny/compose.yaml
@@ -14,6 +14,7 @@ services:
       - /data/config_storage/scrutiny/influxdb:/opt/scrutiny/influxdb
     devices:
       - "/dev/sda"
+      - "/dev/sdb"
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
