--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -966,3 +966,16 @@ linked_repo = "compose_main"
 run_directory = "frigate-notify"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/frigate-notify-holmie.env"
+
+##
+
+[[stack]]
+name = "windows-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "windows-holmie"
+linked_repo = "compose_main"
+run_directory = "windows"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/windows-holmie.env"
