--- a/windows/compose.yaml
+++ b/windows/compose.yaml
@@ -11,7 +11,7 @@ services:
     cap_add:
       - NET_ADMIN
     ports:
-      - 8006:8006
+      #- 8006:8006  # webui
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
