--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -979,3 +979,16 @@ linked_repo = "compose_main"
 run_directory = "windows"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/windows-holmie.env"
+
+##
+
+[[stack]]
+name = "prosody-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "prosody-holmie"
+linked_repo = "compose_main"
+run_directory = "prosody"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/prosody-holmie.env"
