--- a/ejabberd/compose.yaml
+++ b/ejabberd/compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5222:5222"   # XMPP client connections
       - "5269:5269"   # XMPP server-to-server
-      - "`:5443"   # HTTPS admin panel and API
+      - "5443:5443"   # HTTPS admin panel and API
       - "1883:1883"   # MQTT support (optional)
     environment:
       - ERLANG_NODE_ARG=ejabberd@localhost
