--- a/ejabberd/compose.yaml
+++ b/ejabberd/compose.yaml
@@ -1,18 +1,13 @@
 ---
 services:
-  ejabberd:
-    image: ejabberd/ecs:latest
-    container_name: ejabberd-xmpp
-    restart: unless-stopped
+  processone:
+    command: live
+    image: ghcr.io/processone/ejabberd
     ports:
-      - "5222:5222"  # XMPP client connections
-      - "5269:5269"  # XMPP server-to-server
-      - "5443:5443"  # HTTPS admin panel and API
-      #- "1883:1883"  # MQTT support (optional)
-    environment:
-      - ERLANG_NODE_ARG=ejabberd@localhost
-      - CTL_ON_CREATE=register admin chat.${DOMAIN} ${PASSWORD}
+      - 5222:5222
     volumes:
-      - /data/config_storage/ejabberd-data:/home/ejabberd/database
-      - /data/dont_backup/ejabberd-logs:/home/ejabberd/logs
-      - /data/config_storage/komodo/etc_komodo/repos/compose_main/ejabberd/ejabberd.yml:/home/ejabberd/conf/ejabberd.yml:ro
+      - /data/config_storage/ejabberd/database:/opt/ejabberd/database
+      - /data/config_storage/ejabberd/conf/ejabberd.yml:/opt/ejabberd/conf/ejabberd.yml
+    tty: true
+    stdin_open: true
+    container_name: ejabberd
