--- a/planka/compose.yaml
+++ b/planka/compose.yaml
@@ -2,7 +2,7 @@
 services:
   planka:
     container_name: planka
-    image: ghcr.io/plankanban/planka:2.0.0-rc.4
+    image: ghcr.io/plankanban/planka:2.0.0
     restart: unless-stopped
     volumes:
       - /data/config_storage/planka/favicons:/app/public/favicons
