--- a/syncs/snow.toml
+++ b/syncs/snow.toml
@@ -23,3 +23,16 @@ linked_repo = "compose_main"
 run_directory = "immich"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/immich.env"
+
+##
+
+[[stack]]
+name = "wireguard"
+tags = ["snow", "env", "criticality: 1"]
+[stack.config]
+server = "snow"
+project_name = "wireguard"
+linked_repo = "compose_main"
+run_directory = "wireguard"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/wireguard.env"
