--- a/syncs/snow.toml
+++ b/syncs/snow.toml
@@ -23,3 +23,42 @@ linked_repo = "compose_main"
 run_directory = "immich"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/immich.env"
+
+##
+
+[[stack]]
+name = "pihole-snow"
+tags = ["snow", "criticality: 1"]
+[stack.config]
+server = "snow"
+project_name = "pihole-snow"
+linked_repo = "compose_main"
+run_directory = "pihole"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/pihole-snow.env"
+
+##
+
+[[stack]]
+name = "dnscrypt-proxy-snow"
+tags = ["snow", "criticality: 1"]
+[stack.config]
+server = "snow"
+project_name = "dnscrypt-proxy-snow"
+linked_repo = "compose_main"
+run_directory = "dnscrypt-proxy"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/dnscrypt-proxy-snow.env"
+
+##
+
+[[stack]]
+name = "traefik-snow"
+tags = ["snow", "criticality: 1"]
+[stack.config]
+server = "snow"
+project_name = "traefik-snow"
+linked_repo = "compose_main"
+run_directory = "traefik"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/traefik-snow.env"
