--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -992,3 +992,16 @@ linked_repo = "compose_main"
 run_directory = "mattermost"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/mattermost-holmie.env"
+
+##
+
+[[stack]]
+name = "bluehood-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "bluehood-holmie"
+linked_repo = "compose_main"
+run_directory = "bluehood"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/bluehood-holmie.env"
