--- a/bluehood/compose.yaml
+++ b/bluehood/compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: bluehood
     restart: unless-stoppe
     # Required for Bluetooth access
-    network_mode: host
+    #network_mode: host
     privileged: true
     # Mount D-Bus socket for BlueZ communication
     volumes:
