--- a/bluehood/compose.yaml
+++ b/bluehood/compose.yaml
@@ -2,7 +2,7 @@ services:
   bluehood:
     image: ghcr.io/dannymcc/bluehood:0.3.0
     container_name: bluehood
-    restart: unless-stoppe
+    restart: unless-stopped
     # Required for Bluetooth access
     #network_mode: host
     privileged: true
