--- a/bluehood/compose.yaml
+++ b/bluehood/compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: bluehood
     restart: unless-stopped
     # Required for Bluetooth access
-    #network_mode: host
+    network_mode: host
     privileged: true
     # Mount D-Bus socket for BlueZ communication
     volumes:
@@ -16,8 +16,8 @@ services:
     # Web dashboard available at http://localhost:8080
     security_opt:
       - no-new-privileges:true  # helps to increase security
-    networks:
-      - intranet
+    #networks:
+    #  - intranet
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.bluehood.entrypoints=http"
