--- a/syncs/procedure.toml
+++ b/syncs/procedure.toml
@@ -7,7 +7,8 @@ config.failure_alert = false
 name = "Pull"
 enabled = true
 executions = [
-  { execution.type = "PullRepo", execution.params.repo = "compose_main", enabled = true }
+  { execution.type = "PullRepo", execution.params.repo = "compose_main", enabled = true },
+  { execution.type = "PullRepo", execution.params.repo = "IaC", enabled = true }
 ]
 
 [[procedure.config.stage]]
