--- a/syncs/repo.toml
+++ b/syncs/repo.toml
@@ -38,4 +38,4 @@ server = "holmie"
 git_provider = "git.holmlab.org"
 git_account = "komodo"
 repo = "shady/IaC"
-branch = "master"
+branch = "main"
