--- a/syncs/syncs.toml
+++ b/syncs/syncs.toml
@@ -2,7 +2,7 @@
 name = "syncs"
 tags = ["syncs"]
 [resource_sync.config]
-linked_repo = "compose_main"
+linked_repo = "IaC"
 resource_path = ["syncs/syncs.toml"]
 
 ##
@@ -44,7 +44,7 @@ resource_path = ["syncs/holmie.toml"]
 name = "mck"
 tags = ["mck"]
 [resource_sync.config]
-linked_repo = "compose_main"
+linked_repo = "IaC"
 resource_path = ["syncs/mck.toml"]
 
 ##
