--- a/semaphore/compose.yaml
+++ b/semaphore/compose.yaml
@@ -1,6 +1,7 @@
 services:
   semaphore_db:
     image: postgres:18.2
+    user: 1000:1000
     environment:
       POSTGRES_USER: semaphore
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -18,6 +19,7 @@ services:
     depends_on:
       - semaphore_db
     image: public.ecr.aws/semaphore/pro/server:v2.17.0
+    user: 1000:1000
     environment:
       SEMAPHORE_DB_DIALECT: postgres
       SEMAPHORE_DB_HOST: semaphore_db
