--- a/seerr/compose.yaml
+++ b/seerr/compose.yaml
@@ -4,6 +4,7 @@ services:
     image: ghcr.io/seerr-team/seerr:v3.0.1
     init: true
     container_name: seerr
+    user: 1000:1000
     environment:
       - LOG_LEVEL=debug
       - TZ=America/New_York
