--- a/seerr/compose.yaml
+++ b/seerr/compose.yaml
@@ -27,7 +27,7 @@ services:
       - "traefik.http.routers.seerr-secure.service=seerr"
       - "traefik.http.services.seerr.loadbalancer.server.port=5055"  # port of the service.
       - "traefik.docker.network=intranet"
-      - "homepage.group=Other"
+      - "homepage.group=Media"
       - "homepage.name=seerr"
       - "homepage.icon=/images/seerr.png"
       - "homepage.href=https://seerr.${DOMAIN}/"
