--- a/seerr/compose.yaml
+++ b/seerr/compose.yaml
@@ -29,7 +29,7 @@ services:
       - "traefik.docker.network=intranet"
       - "homepage.group=Media"
       - "homepage.name=media-request"
-      - "homepage.icon=/images/media-request.png"
+      - "homepage.icon=/images/seerr.png"
       - "homepage.href=https://media-request.${DOMAIN}/"
 
 networks:
